--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Grayscale - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
 
@@ -53,7 +53,7 @@
     <div class="container">
         
       <div class="col">
-      <font size="5px" color="white">Redes sociales</font>
+      <font> size="5px" color="white">Redes sociales</font>
       </div>
         
       <div class="col">  
