--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <body>
         <!-- Header -->
         <nav class="navbar navbar-light bg-light" style="padding: 1em">
-            <a class="navbar-brand">Encuentranos <i class="fas fa-map-marker-alt"></i></a>
+        
 
-            <div class="nav-brand"> <h3>Dedos tienda</h3> </div>
+            <div class="nav-brand"> <h3>Dedos tienda <i class="fas fa-store"></i> </h3>  </div>
             
             <form class="form-inline">
                 <a href="">Sing in</a>
