--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
     <body>
         <!-- Header -->
         <nav class="navbar navbar-light bg-light" style="padding: 1em">
-        
+          <a class="navbar-brand">Encuentranos <i class="fas fa-map-marker-alt"></i></a>
 
-            <div class="nav-brand"> <h3>Dedos tienda <i class="fas fa-store"></i> </h3>  </div>
-            
-            <form class="form-inline">
-                <a href="">Sing in</a>
-                <a href="">/</a>
-                <a href="" style="margin-right: 0.5em">Log in</a>
+          <center><h3>Dedos tienda</h3></center>
 
-                <input class="form-control mr-sm-2" type="search" placeholder="Camaras, lentes, tripies" aria-label="Search">
-                <a href=""><i class="fas fa-search"></i></a>
-            </form>
+          <form class="form-inline">
+              <a href="">Sing in</a>
+              <a href="">/</a>
+              <a href="" style="margin-right: 0.5em">Log in</a>
+
+              <input class="form-control mr-sm-2" type="search" placeholder="Camaras, lentes, tripies" aria-label="Search">
+              <a href=""><i class="fas fa-search"></i></a>
+          </form>
 
         </nav>
 
@@ -53,10 +53,108 @@
         </ul>
         <!-- Body -->
 
+        <!-- Slider -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="img/Ecommerce-SEO.png" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/nikon.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/nikonBackground.jpg" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
 
+          <!-- New Products -->
+          <div class="container">
+            <div class="row"> <h2>Nuevos productos</h2></div>
+            <br><br>
+              <div class="row justify-content-around">
+                  <div class=" card" style="width: 18rem;">
+                      <img class="card-img-top" src="..." alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Carrito bien prron</h5>
+                        <p class="card-text">estandar, rojito y bien prron</p>
+                      </div>
+                  </div>
+                  <div class=" card" style="width: 18rem;">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+                  <div class=" card" style="width: 18rem;">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="row">
 
+              </div>
+          </div>
+        <br><br>
+        <!-- Categorias de productos -->
+        <div class="container" id="cat">
+            <div class="row"><h2>Nuestras categorias</h2></div>
+            <br><br>
+            <div class="row">
+                <div class="col">
+                    <div class=" card" style="width: 110%;">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Camaras</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class=" card" style="width: 110%;">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Lentes</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-100"></div>
+                <div class="col">
+                    <div class=" card" style="width: 110%;">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Tripodes</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class=" card" style="width: 110%;">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Accesorios</h5>
+                        </div>
+                    </div>
+                </div>
+              </div>
+        </div>
 
-
+        <br><br>
         <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
 
@@ -97,5 +195,14 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+        <script>
+          $(document).ready(function() {
+            $('.carousel').carousel({interval: 7000});
+
+            if($("body").height() < $(window).height()){
+              $("footer").css({"position":"absolute","border": "0px"});
+            }
+          });
+        </script>
     </body>
 </html>
