--- a/formBasic.html
+++ b/formBasic.html
@@ -26,9 +26,11 @@
           <div class="nav-brand"> <h3>Dedos tienda <i class="fas fa-store"></i> </h3>  </div>
           
           <form class="form-inline">
-              <a href="">Sing in</a>
-              <a href="">/</a>
-              <a href="" style="margin-right: 0.5em">Log in</a>
+              <div style="margin: 0 1em 0 0em">
+                <a href="">Admin
+                    <i class="fas fa-user fa-lg"></i>
+                </a>
+              </div>
 
               <input class="form-control mr-sm-2" type="search" placeholder="Camaras, lentes, tripies" aria-label="Search">
               <a href=""><i class="fas fa-search"></i></a>
@@ -39,7 +41,7 @@
         <!-- Navigation -->
         <ul class="nav nav-tabs justify-content-center" style="margin-top: 1em">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Inicio</a> 
+            <a class="nav-link" href="#">Inicio</a> 
           </li>  
            <li class="nav-item dropdown">
           </div>
@@ -53,19 +55,60 @@
             <a class="dropdown-item" href="#">Flashes</a>
             <a class="dropdown-item" href="#">Fotografias</a>
           </div>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ofertas</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Camaras</a>
-            <a class="dropdown-item" href="#">Lentes</a>
-          </div>
-        </li>
-      </ul>
+            <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ofertas</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Camaras</a>
+                <a class="dropdown-item" href="#">Lentes</a>
+            </div>
+            </li>
+            <li class="nav-item">
+                    <a class="nav-link active" href="#">Administrador</a> 
+            </li>
+        </ul>
         <!-- Body -->
-                
+        <div class="container" style="margin-top: 3em;">
+            <div class="row" >
+                <div class="col card" style="margin-right: 1.5em;">
+                        <form>
+                                <div class="form-group">
+                                  <label for="exampleInputEmail1">Email address</label>
+                                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                </div>
+                                <div class="form-group">
+                                  <label for="exampleInputPassword1">Password</label>
+                                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                </div>
+                                <div class="form-check">
+                                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                              </form>
+                </div>
+                <div class="col card" style="margin-left: 1.5em;">
+                        <form>
+                                <div class="form-group">
+                                  <label for="exampleInputEmail1">Email address</label>
+                                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                </div>
+                                <div class="form-group">
+                                  <label for="exampleInputPassword1">Password</label>
+                                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                </div>
+                                <div class="form-check">
+                                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                              </form>
+                </div>
+            </div>
+        </div>
         <!-- Footer -->
-    <footer class="bg-black small text-center text-white-50">
-
+      <footer class="bg-black small text-center text-white-50">
             <div class="container">
               <div class="row">
                 <font size="5px", color="white">Información</font> 
