--- a/productos.html
+++ b/productos.html
@@ -74,52 +74,68 @@
                     <thead>
                       <tr>
                         <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Marca</th>
+                        <th scope="col">Existencias</th>
+                        <th scope="col">Tipo de producto</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
                         <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>Camara</td>
+                        <td>Nikon</td>
+                        <td>15</td>
+                        <td>Camaras fotografias</td>
                       </tr>
                       <tr>
                         <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
+                        <td>Tripie 3m</td>
+                        <td>Nikon</td>
+                        <td>5</td>
+                        <td>Tripodes</td>
                       </tr>
                     </tbody>
                   </table>      
                 </div>
                 <div class="col card" style="margin-left: 1.5em; padding-bottom: 2em; padding-top: 1em;">
-                  <form>
-                    <div class="form-group">
-                      <label for="exampleInputEmail1">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleInputPassword1">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                    </div>
-                    <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
-                    <br>
-                    <center>
-                      <button type="button" class="btn btn-primary">Editar/Agregar</button>
-                      <button type="button" class="btn btn-danger">Eliminar</button>
-                    </center>
+                    <form>
+                        <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputEmail4">Nombre</label>
+                            <input type="email" class="form-control" id="inputEmail4" placeholder="Nombre">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword4">Marca</label>
+                            <input type="password" class="form-control" id="inputPassword4" placeholder="Marca">
+                        </div>
+                        </div>
+                        <div class="form-group">
+                        <label for="inputAddress">Descripción</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="Camara de video 4k...">
+                        </div>
+                        <div class="form-group">
+                        <label for="inputAddress2">Tipo de producto</label>
+                        <input type="text" class="form-control" id="inputAddress2" placeholder="Camara, tripode, etc.">
+                        </div>
+                        <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputCity">Precio mayoreo</label>
+                            <input type="text" class="form-control" id="inputCity">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="inputZip">Precio minoria</label>
+                            <input type="text" class="form-control" id="inputZip">
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label for="inputZip">Existencias</label>
+                            <input type="text" class="form-control" id="inputZip">
+                        </div>
+                        </div>
+                        <center>
+                        <button type="button" class="btn btn-primary">Editar/Agregar</button>
+                        <button type="button" class="btn btn-danger">Eliminar</button>
+                        </center>
                   </form>
                 </div>
             </div>
