--- a/proveedores.html
+++ b/proveedores.html
@@ -74,48 +74,70 @@
                     <thead>
                       <tr>
                         <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Telefono</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Empresa</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
                         <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>Juan Carlos</td>
+                        <td>(449) 123 1234</td>
+                        <td>chars@chars.com</td>
+                        <td>Chars company</td>
                       </tr>
                       <tr>
                         <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
+                        <td>Rulo</td>
+                        <td>(449) 123 6969</td>
+                        <td>rulo@negro.com</td>
+                        <td>Negro Company</td>
                       </tr>
                     </tbody>
                   </table>      
                 </div>
                 <div class="col card" style="margin-left: 1.5em; padding-bottom: 2em; padding-top: 1em;">
                   <form>
-                    <div class="form-group">
-                      <label for="exampleInputEmail1">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputEmail4">Nombre</label>
+                        <input type="email" class="form-control" id="inputEmail4" placeholder="Nombre">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputPassword4">Empresa</label>
+                        <input type="password" class="form-control" id="inputPassword4" placeholder="Empresa">
+                    </div>
                     </div>
                     <div class="form-group">
-                      <label for="exampleInputPassword1">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            <label for="inputAddress">Email</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="Email">
+                            </div>
+                    <div class="form-group">
+                    <label for="inputAddress">Marca</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="Marca">
                     </div>
-                    <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    <div class="form-group">
+                    <label for="inputAddress2">Direccion</label>
+                    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
                     </div>
+
+                    <label for="inputZip">Fecha surte</label>
+                    <input type="date" class="form-control" id="inputZip">
                     <br>
+
+                    <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputCity">Telefono</label>
+                        <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputCity">Tipo producto</label>
+                        <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    </div>
+                    
                     <center>
                       <button type="button" class="btn btn-primary">Editar/Agregar</button>
                       <button type="button" class="btn btn-danger">Eliminar</button>
