Enlaces entre paginas

--- a/nosotros.html
+++ b/nosotros.html
@@ -16,7 +16,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>Nostros</title>
     </head>
     <body>
         <!-- Header -->
@@ -26,9 +26,9 @@
           <div class="nav-brand"> <h3>Dedos tienda <i class="fas fa-store"></i> </h3>  </div>
           
           <form class="form-inline">
-              <a href="">Sing in</a>
+              <a href="registrate.html">Sing in</a>
               <a href="">/</a>
-              <a href="" style="margin-right: 0.5em">Log in</a>
+              <a href="login.html" style="margin-right: 0.5em">Log in</a>
 
               <input class="form-control mr-sm-2" type="search" placeholder="Camaras, lentes, tripies" aria-label="Search">
               <a href=""><i class="fas fa-search"></i></a>
@@ -38,19 +38,29 @@
 
         <!-- Navigation -->
         <ul class="nav nav-tabs justify-content-center" style="margin-top: 1em">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Ofertas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Administrador</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Carrito</a>
-                </li>
-        </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="index.php">Inicio</a>
+          </li>
+           <li class="nav-item dropdown">
+          </div>
+            <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Productos</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Camaras</a>
+            <a class="dropdown-item" href="#">Lentes</a>
+            <a class="dropdown-item" href="#">Tripies</a>
+            <a class="dropdown-item" href="#">Accesorios</a>
+            <a class="dropdown-item" href="#">Flashes</a>
+            <a class="dropdown-item" href="#">Fotografias</a>
+          </div>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ofertas</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Camaras</a>
+            <a class="dropdown-item" href="#">Lentes</a>
+          </div>
+        </li>
+      </ul>
         <!-- Body -->
         <br>
         <div id="titulos"><center><h2> ¿Quienes somos? </h2> </center></div>
