--- a/admin.html
+++ b/admin.html
@@ -41,7 +41,7 @@
         <!-- Navigation -->
         <ul class="nav nav-tabs justify-content-center" style="margin-top: 1em">
           <li class="nav-item">
-              <a class="nav-link" href="#">Inicio</a> 
+              <a class="nav-link" href="index.php">Inicio</a> 
             </li>  
              <li class="nav-item dropdown">
             </div>
@@ -77,7 +77,7 @@
                             </div>
                             <div class="mr-5">Empleados</div>
                         </div>
-                        <a class="card-footer text-white clearfix small z-1" href="#">
+                        <a class="card-footer text-white clearfix small z-1" href="empleados.html">
                             <span class="float-left">Editar</span>
                             <span class="float-right">
                                 <i class="fas fa-angle-right"></i>
@@ -93,7 +93,7 @@
                             </div>
                             <div class="mr-5">Productos</div>
                         </div>
-                        <a class="card-footer text-white clearfix small z-1" href="#">
+                        <a class="card-footer text-white clearfix small z-1" href="productos.html">
                             <span class="float-left">Editar</span>
                             <span class="float-right">
                                 <i class="fas fa-angle-right"></i>
@@ -109,7 +109,7 @@
                                 </div>
                             <div class="mr-5">Proveedores</div>
                         </div>
-                        <a class="card-footer text-white clearfix small z-1" href="#">
+                        <a class="card-footer text-white clearfix small z-1" href="proveedores.html">
                             <span class="float-left">Editar</span>
                             <span class="float-right">
                                 <i class="fas fa-angle-right"></i>
@@ -125,7 +125,7 @@
                             </div>
                             <div class="mr-5">Usuarios</div>
                         </div>
-                        <a class="card-footer text-white clearfix small z-1" href="#">
+                        <a class="card-footer text-white clearfix small z-1" href="usuarios.html">
                             <span class="float-left">Editar</span>
                             <span class="float-right">
                                 <i class="fas fa-angle-right"></i>
